...
              color: Colors.black,
              width: 1.0,
            ),
          ),
        ),
        child: BottomNavigationBar(
          key: const Key('bottom_nav_bar'),
          currentIndex: currentIndex,
          onTap: onNavigationTap,
          type: BottomNavigationBarType.fixed,
          showSelectedLabels: false,
          showUnselectedLabels: false,

...
